# visual_odometry

./: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
apps/: CMakeLists.txt  main.cpp
include/: cost_functions.hpp  feature_extractor.hpp  feature_matcher.hpp  image_loader.hpp  keyframe.hpp  odometer.hpp  utils.hpp  viz_tools.hpp
res/: intrinsics.json
src/: CMakeLists.txt  cost_functions.cpp  feature_extractor.cpp  feature_matcher.cpp  image_loader.cpp  odometer.cpp  utils.cpp  viz_tools.cpp
tests/: CMakeLists.txt  test.cpp
